Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/top.st
language core;

extend with #natural-literals, #top-type, #bottom-type;

fn main(n : Nat) -> Top {
  return 12
}